get activity messages route
