# backendsqlite/swagger_output.json
@@ -256,12 +256,12 @@
         }
       }
     },
-    "/api/activities/{id}": {
+    "/api/activities/{activityId}": {
       "get": {
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "activityId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -291,7 +291,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "activityId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -357,7 +357,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "activityId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -384,12 +384,12 @@
         }
       }
     },
-    "/api/activities/{id}/register": {
+    "/api/activities/{activityId}/register": {
       "post": {
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "activityId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -416,12 +416,12 @@
         }
       }
     },
-    "/api/activities/{id}/unregister": {
+    "/api/activities/{activityId}/unregister": {
       "post": {
         "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "activityId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -438,6 +438,35 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/activities/{activityId}/messages/": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "activityId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "token",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "401": {
             "description": "Unauthorized"
